--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -1,3 +1,8 @@
 {
-  "platformName": "Platform Name"
+  "platformName": "Platform Name",
+  "dataManagement": "Data",
+  "taskManagement": "Task",
+  "iJoined": "Joined",
+  "iCreated": "Created",
+  "algorithmLibrary": "Algorithm"
 }
